@@ -9,12 +9,8 @@ echo ETCD_URL = $ETCD_URL
 if [[ "$1" == "consumer" ]]; then
   echo "Starting consumer agent..."
   java -jar \
-       -server \
        -Xms1536M \
        -Xmx1536M \
-       -XX:+UseParallelGC \
-       -XX:+AggressiveOpts \
-       -XX:+UseFastAccessorMethods \
        -Dtype=consumer \
        -Dserver.port=20000\
        -Detcd.url=$ETCD_URL \
@@ -24,12 +20,8 @@ if [[ "$1" == "consumer" ]]; then
 elif [[ "$1" == "provider-small" ]]; then
   echo "Starting small provider agent..."
   java -jar \
-       -server \
        -Xms512M \
        -Xmx512M \
-       -XX:+UseParallelGC \
-       -XX:+AggressiveOpts \
-       -XX:+UseFastAccessorMethods \
        -Dtype=provider \
        -Dprovider.threads= 3 \
        -Ddubbo.client.threads= 50 \
@@ -42,12 +34,8 @@ elif [[ "$1" == "provider-small" ]]; then
 elif [[ "$1" == "provider-medium" ]]; then
   echo "Starting medium provider agent..."
   java -jar \
-       -server \
        -Xms1536M \
        -Xmx1536M \
-       -XX:+UseParallelGC \
-       -XX:+AggressiveOpts \
-       -XX:+UseFastAccessorMethods \
        -Dtype=provider \
        -Dprovider.threads= 6 \
        -Ddubbo.client.threads= 100 \
